--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vcard-json",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "Easily and smartly convert vcard file(s) to a JSON object.",
   "main": "./lib/vcard-json.js",
   "keywords": ["vcard"],
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Steven Elliott <steven@stevenelliott.me> (http://stevenelliott.me/)",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url" : "https://github.com/steven-elliott/vcard-json"
