--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/steven-elliott/vcard-json"
   },
   "dependencies": {
+    "mimelib": "^0.3.1",
     "underscore": "^1.8.2",
     "underscore.string": "^3.0.3"
   }
